[tool.poetry]
name = "gov-chat"
version = "0.1.0"
description = "chatbot for government websites"
authors = ["Robert Sivilli <robert.sivilli@gmail.com>"]
readme = "README.md"
packages = [{include = "gov_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.238"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
librosa = "^0.10.0.post2"
gradio = "^3.38.0"


[tool.poetry.group.private-llm.dependencies]
gpt4all = "^1.0.5"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[tool.poetry.group.webcrawler.dependencies]
lxml = "^4.9.3"
bs4 = "^0.0.1"
html5lib = "^1.1"
selenium = "^4.10.0"
unstructured = "^0.8.1"
selenium-wire = "^5.1.0"




[tool.poetry.group.splitandstore.dependencies]
sentence-transformers = "^2.2.2"
chromadb = "^0.4.2"


[tool.poetry.group.management-service.dependencies]
django = "^4.2.3"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
